--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
   <div class="parentContainer">
     <div class="container">
       <div class="imageContainer">
-        <img src="./images/image-product-desktop.jpg" alt="cologne image"/>
+        <img 
+          src="./images/image-product-desktop.jpg" 
+          alt="cologne image"
+          class="imageDesktop"
+        />
+        <img 
+          src="./images/image-product-mobile.jpg" 
+          alt="cologne image"
+          class="imageMobile"
+        />
+        
       </div>
       
       <div class="productDeailsContainer">
@@ -56,7 +66,6 @@
     </div>
   </div>
 
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/panosjapan7" target="_blank">Panos</a>
