main=role is unnecessary

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </style>
 </head>
 <body>
-  
-  <main role="main">
+
+  <main>
     <div class="parentContainer">
       <div class="container">
         <div class="imageContainer">
