Page must contain a level-one heading

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="productDeailsContainer">
           <p class="productType">Perfume</p>
           
-          <p class="productTitle">Gabrielle Essence Eau De Parfum</p>
+          <h1 class="productTitle">Gabrielle Essence Eau De Parfum</h1>
           
           <p class="productDescription">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
             Perfumer-Creator for the House of CHANEL.</p>
