added div to footer tag

--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
       </div>
     </div>
 
+  </main>
+  
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.frontendmentor.io/profile/panosjapan7" target="_blank">Panos</a>
     </div>
-  </main>
+  </footer>
 
 </body>
 </html>
